--- a/style.css
+++ b/style.css
@@ -27,9 +27,8 @@ html,
   display: block;
   margin-left: auto;
   margin-right: auto;
-  justify-content: center;
-  background-color: #8fb4d6;
-  align-items: center;
+  width: 50%;
+  background-color: #8fb4d6;  
 }
 
 .table-container {
