--- a/style.css
+++ b/style.css
@@ -35,6 +35,14 @@ html,
   width: 100%
 }
 
+.profile-picture1 {
+  display: block;
+  background-color: #8fb4d6;
+  margin-left: auto;
+  margin-right: auto;
+  width: 65%;
+}
+
 .profile-picture {
   display: block;
   background-color: #8fb4d6;
